force-app/main/default/objects/Genesys_Cloud_Presence__c/Genesys_Cloud_Presence__c.object-meta.xml
<CustomObject>
    <label>Genesys Cloud Presence</label>
    <nameField>
        <label>Display Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Genesys Cloud Presences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>