force-app/main/default/objects/Genesys_Cloud_Presence__c/fields/DivisionId__c.field-meta.xml
<CustomField>
    <fullName>DivisionId__c</fullName>
    <label>DivisionId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>