force-app/main/default/objects/Genesys_Cloud_Presence__c/fields/Presence_Id__c.field-meta.xml
<CustomField>
    <fullName>Presence_Id__c</fullName>
    <label>Presence Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>