force-app/main/default/objects/Genesys_Cloud_Presence__c/fields/System_Presence__c.field-meta.xml
<CustomField>
    <fullName>System_Presence__c</fullName>
    <label>System Presence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>